fix: TabCompleteに関する処理を変更